Alignment wip
Still doesn't work when alignment > 16 bytes.